# openfoam_ai

./: .editorconfig  .env  .env.example  .gitignore  AI执行手册.md  AI约束宪法.litcoffee  CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD_READINESS.md  GUI使用指南.md  LICENSE  LLM配置指南.md  README.md  README_EN.md  README_LLM配置.md  auto_demo.py  clean.py  convert.py  demo_features.py  demo_full_workflow.py  demo_mock_simulation.py  interactive_gui.py  interactive_openfoam_ai.py  launch_gui.py  pyproject.toml  quick_start.py  start.bat  start_gui.bat  start_openfoam_ai.py  start_simulation.py  start_with_llm.py  start_with_your_kimi.py  test_import.py  test_llm_connection.py  test_mock.py  test_refactor.py  免费LLM推荐.md  启动说明.txt  配置真实LLM.md  项目概要.litcoffee
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除指南.md  社区与贡献.md  项目概述.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md  工具API接口.md  数据结构定义.md  配置API接口.md
.qoder/repowiki/zh/content/API参考文档/核心API接口/: CaseManager API.md  ManagerAgent API.md  OpenFOAMRunner API.md  PromptEngine API.md  Validators API.md  核心API接口.md
.qoder/repowiki/zh/content/实用工具模块/: OpenFOAM仿真模拟器.md  动画生成器.md  实用工具模块.md  算例可视化器.md  结果可视化器.md
.qoder/repowiki/zh/content/开发指南/: 代码规范与约定.md  开发指南.md  开发环境搭建.md  调试与故障排除.md
.qoder/repowiki/zh/content/开发指南/性能优化/: 内存管理优化.md  向量数据库优化.md  并发处理优化.md  性能优化.md  性能监控与分析.md  求解器性能优化.md
.qoder/repowiki/zh/content/开发指南/扩展开发指南/: API扩展点.md  扩展开发指南.md  插件系统开发.md  第三方库集成.md
.qoder/repowiki/zh/content/开发指南/扩展开发指南/Agent扩展开发/: Agent开发模板与最佳实践.md  Agent扩展开发.md  几何图像处理Agent开发.md  物理验证Agent开发.md  网格质量评估Agent开发.md  自愈Agent开发.md
.qoder/repowiki/zh/content/核心模块/: OpenFOAM运行器模块.md  提示词引擎模块.md  核心模块.md  物理验证模块.md  算例管理模块.md  管理Agent模块.md
.qoder/repowiki/zh/content/测试与质量保证/: 单元测试.md  回归测试.md  性能测试.md  测试与质量保证.md  集成测试.md
.qoder/repowiki/zh/content/用户界面系统/: Web界面.md  命令行界面.md  用户界面系统.md
.qoder/repowiki/zh/content/系统架构/: 安全机制设计.md  数据流架构.md  系统架构.md  组件交互设计.md
.qoder/repowiki/zh/content/系统架构/Agent架构模式/: Agent架构模式.md  ManagerAgent核心管理器.md  PromptEngine提示词引擎.md
.qoder/repowiki/zh/content/系统架构/Agent架构模式/专用Agent组件/: CriticAgent审查者Agent.md  GeometryImageAgent几何图像Agent.md  MeshQualityAgent网格质量Agent.md  PhysicsValidationAgent物理验证Agent.md  PostprocessingAgent后处理Agent.md  SelfHealingAgent自愈Agent.md  专用Agent组件.md
.qoder/repowiki/zh/content/记忆性建模系统/: 会话管理器.md  记忆性建模系统.md  配置差异分析器.md
.qoder/repowiki/zh/content/记忆性建模系统/记忆管理器/: 向量存储系统.md  增量更新系统.md  相似性检索引擎.md  记忆管理API.md  记忆管理器.md
.qoder/repowiki/zh/content/部署与运维/: Docker容器化部署.md  故障排除指南.md  环境配置管理.md  监控与维护.md  部署与运维.md
.qoder/repowiki/zh/content/配置管理系统/: Docker部署配置.md  依赖管理系统.md  配置管理器.md  配置管理系统.md  项目宪法系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
demo_cases/cavity_demo/: .case_info.json
demo_cases/cavity_flow_100/: .case_info.json
demo_cases/cavity_flow_100/0.1/: U  p  phi
demo_cases/cavity_flow_100/0.2/: U  p  phi
demo_cases/cavity_flow_100/0.3/: U  p  phi
demo_cases/cavity_flow_100/0.4/: U  p  phi
demo_cases/cavity_flow_100/0.5/: U  p  phi
demo_cases/cavity_flow_100/constant/polyMesh/: points
demo_cases/demo_case/: .case_info.json
demo_cases/mock_328551816/: .case_info.json
demo_cases/my_cavity_flow/: .case_info.json
gui_cases/cylinder_2d_karman_vortex_street/: .case_info.json
gui_cases/cylinder_around_flow/: .case_info.json
gui_cases/cylinder_around_flow/system/: controlDict
gui_cases/cylinder_karman_vortex_street/: .case_info.json
gui_cases/rectangular_flow_around_2d/: .case_info.json
interactive_cases/cylinder_around_flow/: .case_info.json
interactive_cases/cylinder_around_flow/constant/: transportProperties
interactive_cases/cylinder_around_flow/system/: blockMeshDict
interactive_cases/cylinder_kaernt_vortex_street/: .case_info.json
interactive_cases/cylinder_kaernt_vortex_street/system/: fvSchemes  fvSolution
openfoam_ai/: .env.example  README.md  __init__.py  main.py  requirements.txt  session_demo_session_001_export.json
openfoam_ai/agents/: __init__.py  case_modifier.py  critic_agent.py  error_recovery.py  geometry_image_agent.py  intent_resolver.py  manager_agent.py  mesh_quality_agent.py  physics_validation_agent.py  postprocessing_agent.py  prompt_engine.py  self_healing_agent.py
openfoam_ai/config/: llm_routing.yaml  system_constitution.yaml
openfoam_ai/config/knowledge/: errors.yaml  glossary.yaml  parameters.yaml  scenarios.yaml  schemes.yaml  solver_requirements.yaml  steps.yaml
openfoam_ai/core/: __init__.py  case_manager.py  config_manager.py  conservation_checker.py  docker_executor.py  file_generator.py  llm_adapter.py  llm_router.py  openfoam_runner.py  physics_router.py  scheme_advisor.py  teaching_engine.py  utils.py  validators.py  wizard_engine.py  yplus_checker.py
openfoam_ai/docker/: Dockerfile  docker-compose.yml
openfoam_ai/sessions/: demo_session_001.json  integration_demo.json
openfoam_ai/tests/: simple_test.py  test_basic.py  test_case_manager.py  test_multiphysics_generator.py  test_phase2.py  test_phase3.py  test_phase4.py
openfoam_ai/ui/: __init__.py  cli_interface.py  event_handlers.py  gradio_interface.py
openfoam_ai/utils/: animation_generator.py  case_visualizer.py  of_simulator.py  result_visualizer.py
