[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfoam-ai"
version = "0.1.0"
description = "基于大语言模型的自动化 CFD 仿真智能体系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "openfoam",
    "cfd",
    "ai",
    "llm",
    "simulation",
    "fluid-dynamics",
    "automation",
    "multi-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "PyFoam>=2023.1",
    "pyvista>=0.43.0",
    "vtk>=9.3.0",
    "gradio>=4.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
docker = [
    "docker>=6.0.0",
]
all = [
    "openfoam-ai[dev,docs,docker]",
]

[project.urls]
Homepage = "https://github.com/yourusername/openfoam-ai"
Documentation = "https://github.com/yourusername/openfoam-ai#readme"
Repository = "https://github.com/yourusername/openfoam-ai.git"
Issues = "https://github.com/yourusername/openfoam-ai/issues"
Changelog = "https://github.com/yourusername/openfoam-ai/blob/main/CHANGELOG.md"

[project.scripts]
openfoam-ai = "openfoam_ai.main:main"
openfoam-ai-web = "openfoam_ai.ui.gradio_interface:launch"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfoam_ai*"]

[tool.setuptools.package-data]
openfoam_ai = [
    "config/*.yaml",
    "config/knowledge/*.yaml",
    "docker/*",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.eggs
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | \.coverage
  | htmlcov
  | \.tox
  | \.nox
  | docs/_build
  | openfoam_ai/_version
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # unused imports
"tests/*" = ["S101"]  # assert statements

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PyFoam.*",
    "pyvista.*",
    "vtk.*",
    "faiss.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=openfoam_ai",
    "--cov-report=term-missing",
]
testpaths = [
    "openfoam_ai/tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mock: marks tests as mock tests (no real OpenFOAM required)",
]

[tool.coverage.run]
source = ["openfoam_ai"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.5.0", hooks = [
        {id = "trailing-whitespace"},
        {id = "end-of-file-fixer"},
        {id = "check-yaml"},
        {id = "check-json"},
        {id = "check-added-large-files"},
    ]},
    {repo = "https://github.com/psf/black", rev = "23.12.1", hooks = [
        {id = "black"},
    ]},
    {repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.1.9", hooks = [
        {id = "ruff"},
    ]},
]
